# sensing_system-Zephyr

./: .clang-format  .clangd  .gitignore  Bluetooth_Specification.md  CMakeLists.txt  CODEOWNERS  Dockerfile  Kconfig  Kconfig.sysbuild  README.md  VERSION  bhi360_features.h  bhi360_features_list.txt  build command.txt  build_with_wifi.sh  compile_commands.json  nrf_connect_custom_gatt.xml  package-lock.json  pm_static.yml  pm_statieeeec.ymleeee  prj.conf  prj_legacy_test.conf  prj_pcb.conf  prj_pcb_rc.conf  prj_pcb_xtal.conf  prj_secondary.conf  prj_wifi.conf  prj_wifi.conf.backup  prj_wifi_addon.conf  sysbuild.cmake  sysbuild.conf  sysbuild_secondary.conf
.devcontainer/: devcontainer.json  devcontainer.json:mshield  postAttachCommand.sh  prepare-commit-msg
boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.yaml  nrf5340dk_nrf5340_cpuapp_defconfig  nrf5340dk_nrf5340_cpuapp_ns.overlay  nrf5340dk_nrf5340_cpuapp_ns.yaml  nrf5340dk_nrf5340_cpuapp_pcb.overlay  nrf5340dk_nrf5340_cpuapp_primary.conf  nrf5340dk_nrf5340_cpuapp_secondary.conf  nrf5340dk_nrf5340_cpuapp_secondary.overlay  nrf5340dk_nrf5340_cpuapp_wifi.overlay.backup  (+6 more)
src/: CMakeLists.txt  Kconfig  Kconfig.fota  fota_fix.cpp  fota_fix.hpp  gait_advanced_features.cpp  gait_events.cpp  gait_events_safety.cpp  main.c  main.cpp
src/activity_metrics/: CMakeLists.txt  Kconfig  README.md  activity_metrics.cpp
src/activity_metrics/zephyr/: module.yml
src/analytics/: CMakeLists.txt  Kconfig  analytics.cpp  bilateral_metrics.cpp  bilateral_metrics.h  choros_buffer_impl.cpp  secondary_metrics.cpp  secondary_metrics.h
src/analytics/zephyr/: module.yml
src/app/: CMakeLists.txt  Kconfig  app.cpp  app_fota_integration.patch  fota_progress_example.cpp.example  step_detection.cpp
src/app/zephyr/: module.yml
src/app_events/: CMakeLists.txt  Kconfig  app_state_event.c  bluetooth_state_event.c  data_event.c  foot_sensor_start_activity_event.c  foot_sensor_state_event.c  foot_sensor_stop_activity_event.c  motion_sensor_start_activity_event.c  motion_sensor_state_event.c  motion_sensor_stop_activity_event.c  streaming_control_event.c
src/app_events/zephyr/: module.yml
src/battery/: CMakeLists.txt  Kconfig  battery.cpp  battery.hpp
src/battery/zephyr/: module.yml
src/bluetooth/: CMakeLists.txt  CMakeLists_update.txt  D2D_COMPLETE_IMPLEMENTATION.md  D2D_FINAL_CHANGES_SUMMARY.md  Kconfig  Kconfig.3d_orientation  activity_metrics_service.cpp  activity_metrics_service.h  ble_conn_params.cpp  ble_connection_manager.cpp  ble_connection_manager.hpp  ble_d2d_file_transfer.cpp  ble_d2d_file_transfer.hpp  ble_d2d_quaternion.cpp  ble_d2d_rx.c  ble_d2d_rx.cpp  ble_d2d_rx.h  ble_d2d_rx.hpp  ble_d2d_rx_client.cpp  ble_d2d_rx_client.hpp  ble_d2d_smp_client.cpp  ble_d2d_smp_client.hpp  ble_d2d_tx.c  ble_d2d_tx.cpp  ble_d2d_tx.h  ble_d2d_tx.hpp  ble_d2d_tx_queue.cpp  ble_d2d_tx_queue.hpp  ble_d2d_tx_service.cpp  ble_d2d_tx_service.hpp  ble_data_seq.cpp  ble_packed_structs.h  ble_recovery_handler.cpp  ble_seq_manager.cpp  ble_services.hpp  bluetooth.cpp  bluetooth_debug.cpp  bluetooth_debug.hpp  bluetooth_integration.patch  ccc_callback_fix.hpp  (+26 more)
src/bluetooth/dtm/src/: ble_dtm.c  dtm_hw_config.h:Zone.Identifier
src/bluetooth/legacy/: README.md  legacy_ble_service.cpp  legacy_ble_service.h
src/bluetooth/zephyr/: module.yml
src/data/: CMakeLists.txt  Kconfig  data.cpp  data_thread_safety_fixes.patch
src/data/zephyr/: module.yml
src/data_dispatcher/: data_dispatcher.cpp  data_dispatcher.h
src/data_sd/: CMakeLists.txt  Kconfig  data_sd.cpp
src/data_sd/zephyr/: module.yml
src/foot_sensor/: CMakeLists.txt  Kconfig  foot_sensor.cpp  foot_sensor_simple.cpp
src/foot_sensor/zephyr/: module.yml
src/gait/: gait_events.cpp
src/idle/: CMakeLists.txt  Kconfig  idle.cpp  idle_event.c
src/idle/zephyr/: module.yml
src/motion_sensor/: CMakeLists.txt  Kconfig  motion_sensor.cpp  motion_sensor_calibration.patch  motion_sensor_calibration_integration.cpp  motion_sensor_comparison.md  motion_sensor_driver_integration.md  motion_sensor_simple.cpp
src/motion_sensor/zephyr/: module.yml
src/packetizer/: CMakeLists.txt  Kconfig  crc32.cpp  packetizer.cpp  safe_buffer.c
src/packetizer/zephyr/: module.yml
src/realtime_metrics/: CMakeLists.txt  Kconfig  realtime_metrics.cpp  realtime_metrics.h  realtime_metrics_algorithms.c
src/realtime_metrics/zephyr/: module.yml
src/sensor_data/: CMakeLists.txt  Kconfig  sensor_data.cpp  sensor_data.h  sensor_data_consolidated.h  sensor_data_consolidated.hpp  sensor_data_enhanced_algorithms.h  sensor_data_enhanced_algorithms.hpp  sensor_data_events.cpp  sensor_data_fast_processing.h  sensor_data_fast_processing.hpp  sensor_data_ring_buffer.h  sensor_data_ring_buffer.hpp  sensor_data_sync.cpp  sensor_data_sync.hpp  sensor_data_sync_enhanced.cpp  sensor_data_sync_enhanced.h
src/sensor_data/zephyr/: module.yml
src/shell_commands/: CMakeLists.txt  Kconfig  log_decoder_cmd.cpp
src/tools/: CMakeLists.txt  Kconfig  log_decoder_app.cpp
src/wifi/: CMakeLists.txt  Kconfig  wifi.cpp  wifi_event.c
src/wifi/zephyr/: module.yml
src/work queue example/: leds.cpp
src/work queue example/animations/: bar_rr_playback.cpp  bar_system_idle.cpp  battery_charging.cpp  battery_status.cpp  ble_flashing.cpp  common_animations.cpp  critical_error_animation.cpp  dfu_animation.cpp  factory_reset.cpp  factory_reset_deleting.cpp  led_bar_fully_charged.cpp  not_in_mode.cpp  pairing_status.cpp  rr_record_animation.cpp
tests/analytics/: CMakeLists.txt  prj.conf  test_analytics.cpp  testcase.yaml
tests/app/: CMakeLists.txt  prj.conf  test_app.cpp  testcase.yaml
tests/data/: CMakeLists.txt  prj.conf  run_decoder_test.sh  test_data.cpp  test_data_log_decode.c  test_log_decoder.cpp  test_protobuf_delta.cpp  testcase.yaml
tests/motion_sensor/: CMakeLists.txt  test_motion_sensor.cpp  testcase.yaml
tests/realtime_metrics/: CMakeLists.txt  prj.conf  test_realtime_metrics.cpp  testcase.yaml
tests/sensor_data/: CMakeLists.txt  prj.conf  test_sensor_data.cpp  testcase.yaml
(+2615 files in other folders)
