add_subdirectory(app)
add_subdirectory(data)
add_subdirectory(bluetooth)
add_subdirectory(app_events)
add_subdirectory(foot_sensor)
add_subdirectory(motion_sensor)
add_subdirectory(activity_metrics)
add_subdirectory(sensor_data)
add_subdirectory(realtime_metrics)
add_subdirectory(analytics)
add_subdirectory(packetizer)
add_subdirectory(battery)
add_subdirectory(wifi)
